<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.juboraj_sarker.tictactoe.activity.DifficultySelectionScreenActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/statusBar"
        android:elevation="4dp"
        android:subtitleTextColor="#fff"
        android:theme="@style/ToolbarStyle"
        android:title="About me"
        android:titleTextColor="#fff"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:subtitleTextColor="#fff"
        app:titleTextColor="#fff" />



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/difficulty"
            android:id="@+id/title"
            android:layout_gravity="center_horizontal"
            android:textStyle="normal"
            android:typeface="normal"
            android:textSize="30sp"
            android:elegantTextHeight="false"
            android:autoText="false" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnEasy"
            android:id="@+id/btnEasy" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnNormal"
            android:id="@+id/btnNormal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnHard"
            android:id="@+id/btnHard" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnImpossible"
            android:id="@+id/btnImpossible" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_home_footer_1">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>
